develop | Added add_to_segment endpoint
